Updated CORS settings to allow Vercel frontend

--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
+
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
 MAIL_USERNAME=Josephedidiong36@gmail.com
 MAIL_PASSWORD=lqvg nbds nwve iryw
 MAIL_DEFAULT_SENDER=Josephedidiong36@gmail.com
-RECIPIENT_EMAIL=Emmanuelimehjames@gmail.com
+
+
+RECIPIENT_EMAIL=oloyeadz@gmail.com
+FRONTEND_URL=https://homebasebank-1smm.vercel.app
